update app name

--- a/OrignalMP/app.json
+++ b/OrignalMP/app.json
@@ -6,7 +6,7 @@
   "window":{
     "backgroundTextStyle":"light",
     "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "Weixin",
+    "navigationBarTitleText": "二进制迷笛",
     "navigationBarTextStyle":"black"
   },
   "style": "v2",
