remove login request

--- a/OrignalMP/project.config.json
+++ b/OrignalMP/project.config.json
@@ -35,7 +35,7 @@
             "disablePlugins": [],
             "outputPath": ""
         },
-        "useIsolateContext": false,
+        "useIsolateContext": true,
         "userConfirmedUseIsolateContext": false,
         "userConfirmedBundleSwitch": false,
         "packNpmManually": false,
